--- a/index.html
+++ b/index.html
@@ -67,8 +67,55 @@
 <br>
 <h4>Мы открылись совсем недавно, поэтому на нашем сайте пока-что контента не много.</h4>
 <br><br>
+<div class="last">
+<div class="last-razdelitel">
+
+</div>
+<br><br>
+<h2>Последние публикации</h2>
+<p>Боитесь упустить важный контент? Ознакомьтесь с нашим расписанием <a href="/schedule.html">тут</a>!</p>
+<br><br>
+<br>
+<br>
 <hr>
 <br>
+<h4>KostySystem - Блог</h4>
+<p>01.09.2024, 0:00</p>
+<h2><a href="/blog/3.html">Всех с 1 сентября, а так-же мы выпустили новое обновление сайта!.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - Блог</h4>
+<p>31.08.2024, 18:30</p>
+<h2><a href="/blog/2.html">Нас ждёт новое обновление!</a></h2>
+<br>
+<hr>
+<br>
+<br>
+
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
+<p>30.08.2024, 22:30</p>
+<h2><a href="/articles/5.html">Как узнать подробные характеристики вашего ПК.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br><br>
+<div class="last-razdelitel">
+
+</div>
+</div>
+<br><br><br><br>
 <h1 id="aboutus">О нас</h1>
 <br><br>
 <img src="favicon.ico" width="70" height="70" align="center"> 
