--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br>
 <h4>Мы открылись совсем недавно, поэтому на нашем сайте пока-что контента не много.</h4>
 <br><br>
-<div class="last">
+<div class="last" id="lastpub">
 <div class="last-razdelitel">
 
 </div>
