--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
 <br>
 <hr>
 <br>
+<h4>KostySystem - статьи</h4>
+<p>04.09.2024, 21:30</p>
+<h2><a href="6.html">Как установить DOSBOX на Windows.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
 <h4>KostySystem - Блог</h4>
 <p>01.09.2024, 0:00</p>
 <h2><a href="/blog/3.html">Всех с 1 сентября, а так-же мы выпустили новое обновление сайта!.</a></h2>
@@ -99,17 +110,6 @@
 <br>
 <br>
 
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>30.08.2024, 22:30</p>
-<h2><a href="/articles/5.html">Как узнать подробные характеристики вашего ПК.</a></h2>
-<br>
-<hr>
-<br>
-<br>
 <br><br>
 <div class="last-razdelitel">
 
