--- a/search.html
+++ b/search.html
@@ -158,6 +158,19 @@ function search() {
 <hr>
 <br>
 <h4>KostySystem - статьи</h4>
+<p>04.09.2024, 21:30</p>
+<div class="card2"><h2><a href="/articles/6.html">Как установить DOSBOX на Windows</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
 <p>30.08.2024, 20:30</p>
 <div class="card2"><h2><a href="/articles/5.html">Как узнать подробные характеристики вашего ПК</a></h2></div>
 <br>
