--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <br>
 <h4>KostySystem - статьи</h4>
 <p>04.09.2024, 21:30</p>
-<h2><a href="6.html">Как установить DOSBOX на Windows.</a></h2>
+<h2><a href="/articles/6.html">Как установить DOSBOX на Windows.</a></h2>
 <br>
 <hr>
 <br>
