--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
 <hr>
 <br>
 <h4>KostySystem - статьи</h4>
+<p>05.09.2024, 23:30</p>
+<h2><a href="/articles/7.html">Как изменить имя пользователя в Windows.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
 <p>04.09.2024, 21:30</p>
 <h2><a href="/articles/6.html">Как установить DOSBOX на Windows.</a></h2>
 <br>
@@ -98,17 +109,6 @@
 <br>
 <br>
 
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Блог</h4>
-<p>31.08.2024, 18:30</p>
-<h2><a href="/blog/2.html">Нас ждёт новое обновление!</a></h2>
-<br>
-<hr>
-<br>
-<br>
 
 <br><br>
 <div class="last-razdelitel">
