--- a/search.html
+++ b/search.html
@@ -158,6 +158,19 @@ function search() {
 <hr>
 <br>
 <h4>KostySystem - статьи</h4>
+<p>05.09.2024, 23:30</p>
+<div class="card2"><h2><a href="/articles/7.html">Как изменить имя пользователя в Windows.</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
 <p>04.09.2024, 21:30</p>
 <div class="card2"><h2><a href="/articles/6.html">Как установить DOSBOX на Windows</a></h2></div>
 <br>
