--- a/search.html
+++ b/search.html
@@ -359,6 +359,19 @@ function search() {
 <hr>
 <br>
 <h4>KostySystem - Блог</h4>
+<p>06.09.2024, 23:30</p>
+<div class="card2"><h2><a href="/blog/4.html">С 15 сентября мы откроем новый раздел "Статьи по Linux"</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - Блог</h4>
 <p>01.09.2024, 0:00</p>
 <div class="card2"><h2><a href="/blog/3.html">Всех с 1 сентября, а так-же мы выпустили новое обновление сайта!</a></h2></div>
 <br>
