--- a/newbie/index.html
+++ b/newbie/index.html
@@ -119,6 +119,16 @@
 <hr>
 <br>
 <br>
+<br>
+<br>
+<hr>
+<br>
+<p>07.09.2024, 21:30</p>
+<h2><a href="8.html">Как выключить компьютер через заданное время</a></h2>
+<br>
+<hr>
+<br>
+<br>
 <br><br><br><br><br>
 </center>
 <div class="copyright" id="copyright">
