--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
 <br>
 <hr>
 <br>
+<h4>Для новичков</h4>
+<p>07.09.2024, 21:30</p>
+<h2><a href="/newbie/8.html">Как выключить компьютер через заданное время.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
 <h4>KostySystem - Блог</h4>
 <p>06.09.2024, 23:30</p>
 <h2><a href="/blog/4.html">С 15 сентября мы откроем новый раздел "Статьи по Linux"</a></h2>
@@ -93,17 +104,6 @@
 <h4>KostySystem - статьи</h4>
 <p>05.09.2024, 23:30</p>
 <h2><a href="/articles/7.html">Как изменить имя пользователя в Windows.</a></h2>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - статьи</h4>
-<p>04.09.2024, 21:30</p>
-<h2><a href="/articles/6.html">Как установить DOSBOX на Windows.</a></h2>
 <br>
 <hr>
 <br>
