--- a/search.html
+++ b/search.html
@@ -258,6 +258,19 @@ function search() {
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>07.09.2024, 21:30</p>
+<div class="card2"><h2><a href="/newbie/8.html">Как выключить компьютер через заданное время.</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div> 
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>28.08.2024, 23:00</p>
 <div class="card2"><h2><a href="/newbie/7.html">Установка VLC Media Player.</a></h2></div>
 <br>
