--- a/newbie/8.html
+++ b/newbie/8.html
@@ -51,7 +51,7 @@
 <p>07.09.2024, 21:30</p>
 <hr>
 <br>
-<p>Здравствуйте! В этой инструкции вы узнаете, как можно компьютер через заданное время.</p>
+<p>Здравствуйте! В этой инструкции вы узнаете, как отключить компьютер через заданное время.</p>
 <br>
 <h3>Запускаем "таймер" до отключения компьютера.</h3>
 <hr>
