--- a/newbie/index.html
+++ b/newbie/index.html
@@ -129,6 +129,15 @@
 <hr>
 <br>
 <br>
+<br>
+<hr>
+<br>
+<p>09.09.2024, 22:40</p>
+<h2><a href="9.html">Как установить VK Messenger на Windows</a></h2>
+<br>
+<hr>
+<br>
+<br>
 <br><br><br><br><br>
 </center>
 <div class="copyright" id="copyright">
