--- a/search.html
+++ b/search.html
@@ -255,6 +255,19 @@ function search() {
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>09.09.2024, 22:40</p>
+<div class="card2"><h2><a href="/newbie/9.html">Как установить VK Messenger на Windows.</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div> 
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>07.09.2024, 21:30</p>
 <div class="card2"><h2><a href="/newbie/8.html">Как выключить компьютер через заданное время.</a></h2></div>
 <br>
