--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Главная - KostySystem</title>
+<title>KostySystem</title>
   <link rel="icon" href="favicon.ico">
 <div id="styles">
 <link rel="stylesheet" type="text/css" href="/styles.css" />
@@ -79,6 +79,17 @@
 <br>
 <hr>
 <br>
+<h4>KostySystem - Статьи</h4>
+<p>11.09.2024, 22:40</p>
+<h2><a href="/articles/8.html">Как загрузить Windows 7 в безопасном режиме.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
 <h4>Для новичков</h4>
 <p>09.09.2024, 22:40</p>
 <h2><a href="/newbie/9.html">Как установить VK Messenger на Windows</a></h2>
@@ -93,17 +104,6 @@
 <h4>Для новичков</h4>
 <p>07.09.2024, 21:30</p>
 <h2><a href="/newbie/8.html">Как выключить компьютер через заданное время.</a></h2>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Блог</h4>
-<p>06.09.2024, 23:30</p>
-<h2><a href="/blog/4.html">С 15 сентября мы откроем новый раздел "Статьи по Linux"</a></h2>
 <br>
 <hr>
 <br>
