--- a/search.html
+++ b/search.html
@@ -155,6 +155,19 @@ function search() {
 <hr>
 <br>
 <h4>KostySystem - статьи</h4>
+<p>11.09.2024, 22:40</p>
+<div class="card2"><h2><a href="/articles/8.html">Как загрузить Windows 7 в безопасном режиме.</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - статьи</h4>
 <p>05.09.2024, 23:30</p>
 <div class="card2"><h2><a href="/articles/7.html">Как изменить имя пользователя в Windows.</a></h2></div>
 <br>
