--- a/newbie/9.html
+++ b/newbie/9.html
@@ -102,7 +102,7 @@
 
 <h3><a href="index.html">К списку статей</a></h3>
 <h3><a href="8.html">Прошлая статья</a></h3>
-<h3><a href="#soon">Следующая статья (пока не написана)</a></h3>
+<h3><a href="10.html">Следующая статья</a></h3>
 
 <br>
 </center>
