--- a/404.html
+++ b/404.html
@@ -50,6 +50,8 @@ color: gray;
 </nav>
 </div>
 <center>
+<div id="vozmozno">
+</div>
 <br>
 <img src="/images/404image.png" width="70" height="70">
 <h1>KostySystem</h1>
@@ -74,5 +76,256 @@ color: gray;
 </center>
 </div>
 <script src="/elements.js"></script>
+<script>
+var notfoundurl = window.location.pathname
+    if (notfoundurl == "/a"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/a/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/ar"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/ar/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/art"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/art/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/arti"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/arti/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artic"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artic/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/articl"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/articl/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/article"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/article/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/aticles/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/aticles"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artices/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artices"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/articls"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/articls/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artcles"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artcles/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artcles/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/artcles"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/rticles/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+    if (notfoundurl == "/rticles"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/articles/\">https://kostysystem.github.io/articles/ (KostySystem Статьи)</a></h4>";
+}
+
+
+    if (notfoundurl == "/n/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/ne/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/new/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newb/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newbi/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newbies/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/n"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/ne"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/new"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newb"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newbi"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newbies"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/nebie/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/nebie"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newbe/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newbe"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/nwbie/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/nwbie"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/ewbie/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/ewbie"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newie/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+    if (notfoundurl == "/newie"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/newbie/\">https://kostysystem.github.io/newbie/ (Для новичков)</a></h4>";
+}
+
+
+
+
+
+
+    if (notfoundurl == "/b/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/b"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/bl/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/bl"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/blo/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/blo"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/blg/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/blg"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/bog/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/bog"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/log/"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+    if (notfoundurl == "/log"){
+        var vozmozno = document.getElementById("vozmozno");
+        vozmozno.innerHTML = "<h4>Возможно, вы имели ввиду: <a href=\"/blog/\">https://kostysystem.github.io/blog/ (Блог KostySystem)</a></h4>";
+}
+</script>
 </body>
 </html>
