--- a/search.html
+++ b/search.html
@@ -409,7 +409,7 @@ function search() {
 <br>
 <h4>KostySystem - Блог</h4>
 <p>06.09.2024, 23:30</p>
-<div class="card2"><h2><a href="/blog/4.html">С 15 сентября мы откроем новый раздел "Статьи по Linux"</a></h2></div>
+<div class="card2"><h2><a href="/blog/4.html">С 15 октября мы откроем новый раздел "Статьи по Linux"</a></h2></div>
 <br>
 <hr>
 <br>
