--- a/newbie/10.html
+++ b/newbie/10.html
@@ -111,7 +111,7 @@
 
 <h3><a href="index.html">К списку статей</a></h3>
 <h3><a href="9.html">Прошлая статья</a></h3>
-<h3><a href="#soon">Следующая статья (пока не написана)</a></h3>
+<h3><a href="11.html">Следующая статья</a></h3>
 
 <br>
 </center>
