--- a/newbie/index.html
+++ b/newbie/index.html
@@ -53,6 +53,16 @@
 <br>
 <hr>
 <br>
+<p>18.09.2024, 12:58</p>
+<h2><a href="11.html">Как установить Opera в Windows</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
 <p>16.09.2024, 21:58</p>
 <h2><a href="10.html">Как установить LibreOffice в Windows</a></h2>
 <br>
