--- a/search.html
+++ b/search.html
@@ -268,6 +268,19 @@ function search() {
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>18.09.2024, 12:58</p>
+<div class="card2"><h2><a href="/newbie/11.html">Как установить Opera в Windows</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div> 
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>16.09.2024, 21:58</p>
 <div class="card2"><h2><a href="/newbie/10.html">Как установить LibreOffice в Windows.</a></h2></div>
 <br>
