--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
 <br>
 <hr>
 <br>
+<h4>KostySystem - Статьи</h4>
+<p>18.09.2024, 22:15</p>
+<h2><a href="/articles/9.html">Современный браузер для Windows XP</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
 <h4>Для новичков</h4>
 <p>18.09.2024, 12:58</p>
 <h2><a href="/newbie/11.html">Как установить Opera в Windows</a></h2>
@@ -93,17 +104,6 @@
 <h4>Для новичков</h4>
 <p>16.09.2024, 21:58</p>
 <h2><a href="/newbie/10.html">Как установить LibreOffice в Windows</a></h2>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<br>
-<hr>
-<br>
-<h4>KostySystem - Статьи</h4>
-<p>11.09.2024, 22:40</p>
-<h2><a href="/articles/8.html">Как загрузить Windows 7 в безопасном режиме.</a></h2>
 <br>
 <hr>
 <br>
