--- a/search.html
+++ b/search.html
@@ -434,6 +434,19 @@ function search() {
 <hr>
 <br>
 <h4>KostySystem - Блог</h4>
+<p>20.09.2024, 23:39</p>
+<div class="card2"><h2><a href="/blog/5.html">21.09.2024 в 23:00 на нашем сайте пройдут технические работы!</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>KostySystem - Блог</h4>
 <p>06.09.2024, 23:30</p>
 <div class="card2"><h2><a href="/blog/4.html">С 15 октября мы откроем новый раздел "Статьи по Linux"</a></h2></div>
 <br>
