--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
 <div id="styles">
 <link rel="stylesheet" type="text/css" href="/styles.css" />
 </div>
+<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 <style>
 .nydetcya-kogda-nibyd {
 color: gray;
@@ -79,6 +80,7 @@ color: gray;
 </center>
 </div>
 <script src="/elements.js"></script>
+<script src="/block.js" type="text/javascript"></script>
 <script>
 var notfoundurl = window.location.pathname
     if (notfoundurl == "/a"){
