--- a/index.html
+++ b/index.html
@@ -138,5 +138,6 @@
 </div>
 <script src="elements.js"></script>
 <script src="local.js" type="text/javascript"></script>
+<script src="/block.js" type="text/javascript"></script>
 </body>
 </html>
