--- a/search.html
+++ b/search.html
@@ -8,6 +8,7 @@
 <div id="styles">
 <link rel="stylesheet" type="text/css" href="/styles.css" />
 </div>
+<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 <div id="fnd"><style> .zaprosi {display: none;} </style></div>
  <style>
             .card {
@@ -536,5 +537,6 @@ fnd.innerHTML = "<style> .zaprosi {display: block;} </style>";
 </center>
 </div>
 <script src="/elements.js"></script>
+<script src="/block.js" type="text/javascript"></script>
 </body>
 </html>
