--- a/newbie/11.html
+++ b/newbie/11.html
@@ -115,7 +115,7 @@
 
 <h3><a href="index.html">К списку статей</a></h3>
 <h3><a href="10.html">Прошлая статья</a></h3>
-<h3><a href="#soon">Следующая статья (пока не написана)</a></h3>
+<h3><a href="12.html">Следующая статья</a></h3>
 
 <br>
 </center>
