--- a/newbie/index.html
+++ b/newbie/index.html
@@ -54,6 +54,16 @@
 <br>
 <hr>
 <br>
+<p>23.09.2024, 22:35</p>
+<h2><a href="12.html">Как найти нужный файл в Windows с помощью проводника</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
 <p>18.09.2024, 12:58</p>
 <h2><a href="11.html">Как установить Opera в Windows</a></h2>
 <br>
