--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 <br>
 <hr>
 <br>
-<h4>Блог</h4>
-<p>20.09.2024, 23:39</p>
-<h2><a href="/blog/5.html">21.09.2024 в 23:00 на нашем сайте пройдут технические работы!</a></h2>
+<h4>Для новичков</h4>
+<p>23.09.2024, 22:35</p>
+<h2><a href="/newbie/12.html">Как найти нужный файл в Windows с помощью проводника</a></h2>
 <br>
 <hr>
 <br>
