--- a/search.html
+++ b/search.html
@@ -283,7 +283,7 @@ function search() {
 <br>
 <h4>Для новичков</h4>
 <p>23.09.2024, 22:30</p>
-<div class="card2"><h2><a href="/newbie/12.html">Как найти нужный файл в Windows с помощью проводникаP</a></h2></div>
+<div class="card2"><h2><a href="/newbie/12.html">Как найти нужный файл в Windows с помощью проводника</a></h2></div>
 <br>
 <hr>
 <br>
