--- a/newbie/12.html
+++ b/newbie/12.html
@@ -94,7 +94,7 @@
 
 <h3><a href="index.html">К списку статей</a></h3>
 <h3><a href="11.html">Прошлая статья</a></h3>
-<h3><a href="#soon">Следующая статья (пока не написана)</a></h3>
+<h3><a href="13.html">Следующая статья</a></h3>
 
 <br>
 </center>
