--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>24.09.2024, 23:47</p>
+<h2><a href="/newbie/13.html">Как установить Notepad++ в Windows</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>23.09.2024, 22:35</p>
 <h2><a href="/newbie/12.html">Как найти нужный файл в Windows с помощью проводника</a></h2>
 <br>
@@ -93,17 +104,6 @@
 <h4>KostySystem - Статьи</h4>
 <p>18.09.2024, 22:15</p>
 <h2><a href="/articles/9.html">Современный браузер для Windows XP</a></h2>
-<br>
-<hr>
-<br>
-<br>
-<br>
-<br>
-<hr>
-<br>
-<h4>Для новичков</h4>
-<p>18.09.2024, 12:58</p>
-<h2><a href="/newbie/11.html">Как установить Opera в Windows</a></h2>
 <br>
 <hr>
 <br>
