--- a/search.html
+++ b/search.html
@@ -282,6 +282,19 @@ function search() {
 <hr>
 <br>
 <h4>Для новичков</h4>
+<p>24.09.2024, 22:47</p>
+<div class="card2"><h2><a href="/newbie/13.html">Как установить Notepad++ в Windows</a></h2></div>
+<br>
+<hr>
+<br>
+<br>
+        </div>
+        <div class="card">
+<br>
+<br>
+<hr>
+<br>
+<h4>Для новичков</h4>
 <p>23.09.2024, 22:30</p>
 <div class="card2"><h2><a href="/newbie/12.html">Как найти нужный файл в Windows с помощью проводника</a></h2></div>
 <br>
