--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@ color: gray;
 <br>
 <br>
 <h1><a href="/">Перейти на главную</a></h1>
-<h1><a href="/search.html">Найти другую страничку</a></h1>
+<h1><a href="#search">Найти другую страничку</a></h1>
 <br><br><br>
 <h4 class="nydetcya-kogda-nibyd">А эта страничка, возможно, когда-нибудь и найдётся!</h4>
 <br><br>
